<resources>
    <string name="app_name">InflationTycoon</string>

    <string name="PREF_COINS" translatable="false">PREF_COINS</string>
    <string name="PREF_CLICK_VALUE" translatable="false">PREF_CLICK_VALUE</string>
    <string name="PREF_AUTO_CLICK_VALUE" translatable="false">PREF_AUTO_CLICK_VALUE</string>

    <string name="PREF_BASIC_PRICE" translatable="false">basicPrice</string>
    <string name="PREF_MEGA_PRICE" translatable="false">megaPrice</string>
    <string name="PREF_AUTO_PRICE" translatable="false">autoPrice</string>
    <string name="PREF_MEGA_AUTO_PRICE" translatable="false">megaAutoPrice</string>


    <string name="launch_welcome_text">Welcome to the best Cookie Clicker!</string>
    <string name="launch_play_button_text">Play</string>
    <string name="launch_options_button_text">Options</string>
    <string name="launch_info_button_text">Ranking</string>
    <string name="launch_exit_button_text">Exit</string>

    <string name="options_title">Options</string>
    <string name="options_theme_button_text">Toggle</string>
    <string name="options_theme_name_text">Dark mode</string>
    <string name="options_theme_description">Toggle between light and dark mode</string>

    <string name="game_coin_text">Touch the picture</string>
    <string name="game_coin_image_content_description">A coin</string>
    <string name="game_money_bag_content_description">Money bag</string>
    <string name="game_auto_click_content_description">A robot with a bag of money</string>
    <string name="game_money_per_second_content_description">Money per second</string>
    <string name="game_money_value_per_click_content_description">A buck</string>

    <string name="shop_coins_content_description">value</string>
    <string name="shop_upgrade_basic_text">Click</string>
    <string name="shop_upgrade_auto_text">Auto click</string>
    <string name="shop_upgrade_mega_text">Mega click</string>
    <string name="shop_upgrade_mega_auto_text">Mega auto click</string>
    <string name="game_info_message_dialog">This a basic CookieClicker project for an android course</string>
    <string name="game_info_title_dialog">Info</string>
    <string name="game_info_donate_dialog">donate</string>
    <string name="ranking_title">Ranking</string>
    <string name="auth_play_button_text">Play now!</string>
    <string name="auth_hint_input_text">Username</string>
    <string name="gen_dialog_pos_button">Ok</string>
    <string name="game_reset_dialog_title">Reset</string>
    <string name="gen_dialog_neg_button">Cancel</string>
    <string name="game_reset_dialog_message">Are you sure you wanna reset all your data?</string>
    <string name="game_max_value_dialog_message">Congratulations, you\'ve finished the game but please, get a life</string>
    <string name="options_music_name">Music</string>
    <string name="options_music_description">Turn music ON/OFF</string>
    <string name="game_max_value_dialog_title">Game end</string>
    <string name="game_max_value_dialog_neg_button">Reset</string>
    <string name="auth_hint_password_input_text">Password</string>
    <string name="auth_title_text">Authentication</string>
    <string name="auth_description_text">Login or sign-up. Note that all spaces will be removed from the username.</string>
    <string name="savegame_succesfully_toast">Game saved!</string>
    <string name="savegame_error_toast">Unable to save the game</string>
    <string name="auth_incorrect_password_toast">Username or password are incorrect</string>
    <string name="auth_create_user_error_toast">There was an error creating the user, try again</string>
    <string name="auth_login_user_toast">Loggin into</string>
    <string name="auth_creating_user_toast">Creating new user</string>
</resources>